--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -19,6 +19,8 @@ spring:
     platform: POSTGRESQL
     testWhileIdle: true
     validationQuery: select 1
+    maxActive: 50
+    maxAge: 60000
   jackson:
     date-format: com.fasterxml.jackson.databind.util.ISO8601DateFormat
     time-zone: UTC
