added e2e/junit tests and fixed problem with nested collection mapping in mybatis

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,6 +32,7 @@ mybatis:
   typeAliasesPackage: at.sparklingscience.urbantrees.domain
   configuration:
     cacheEnabled: false
+    autoMappingBehavior: NONE
 
 # - Logging -
 logging:
