--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,23 @@
 
 	<name>urbantrees</name>
 	<description>Demo project for Spring Boot</description>
+	
+	<scm>
+		<connection>scm:git:https://github.com/laurenzfiala/urban-trees-api.git</connection>
+		<developerConnection>scm:git:https://github.com/laurenzfiala/urban-trees-api.git</developerConnection>
+		<url>https://github.com/laurenzfiala/urban-trees-api</url>
+		<tag>HEAD</tag>
+    </scm>
+    
+    <distributionManagement>
+	    <repository>
+			<id>github</id>
+			<name>Github release</name>
+			<url>https://github.com/laurenzfiala/urban-trees-api.git</url>
+			<layout>default</layout>
+	    </repository>
+    </distributionManagement>
+	
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
