--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>at.sparklingscience</groupId>
@@ -9,13 +10,13 @@
 
 	<name>urbantrees</name>
 	<description>Demo project for Spring Boot</description>
-	
+
 	<scm>
 		<connection>scm:git:https://github.com/laurenzfiala/urban-trees-api.git</connection>
 		<developerConnection>scm:git:https://github.com/laurenzfiala/urban-trees-api.git</developerConnection>
 		<url>https://github.com/laurenzfiala/urban-trees-api</url>
 		<tag>HEAD</tag>
-    </scm>	
+	</scm>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -71,12 +72,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<executable>true</executable>
+				</configuration>
 			</plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.3</version>
-            </plugin>
 		</plugins>
 	</build>
 
