--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -24,6 +24,11 @@ spring:
   jackson:
     date-format: "yyyy-MM-dd'T'HH-mm-ss"
     time-zone: UTC
+  # File Upload
+  http:
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
     
 
 # - MyBatis -
@@ -43,4 +48,4 @@ at:
   sparklingscience:
     urbantrees:
       dateFormatPattern: "yyyy-MM-dd'T'HH-mm-ss"
-    
+      
