* Announcement and Image are now serializable (for caching) * misc fixes

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -36,7 +36,7 @@ mybatis:
   mapperLocations: classpath*:**/mappers/*.xml
   typeAliasesPackage: at.sparklingscience.urbantrees.domain
   configuration:
-    cacheEnabled: false
+    #cacheEnabled: false
     autoMappingBehavior: NONE
 
 # - Logging -
