--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -25,10 +25,11 @@ spring:
     date-format: "yyyy-MM-dd'T'HH-mm-ss"
     time-zone: UTC
   # File Upload
-  http:
-    multipart:
-      max-file-size: 5MB
-      max-request-size: 5MB
+  servlet:
+    http:
+      multipart:
+        max-file-size: 5MB
+        max-request-size: 5MB
     
 
 # - MyBatis -
