--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -18,8 +18,8 @@ server:
 spring:
   # Database
   datasource:
-    url: jdbc:postgresql://localhost:20000/urban_trees
-    username: ${db.username}
+    url: jdbc:postgresql://localhost:5432/urban_trees
+    username: ${db.user}
     password: ${db.password}
     platform: POSTGRESQL
     testWhileIdle: true
@@ -30,10 +30,11 @@ spring:
     date-format: "yyyy-MM-dd'T'HH-mm-ss"
     time-zone: UTC
   # File Upload
-  http:
-    multipart:
-      max-file-size: 5MB
-      max-request-size: 5MB
+  servlet:
+    http:
+      multipart:
+        max-file-size: 5MB
+        max-request-size: 5MB
   security:
     require-ssl: false
     
