--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.0.RELEASE</version>
+		<version>2.1.6.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
@@ -40,6 +40,7 @@
 		</dependency>
 
 		<!-- JWT Security -->
+		<!-- IMPORTANT: KEEP STABLE RELEASES UP-TO-DATE -->
 		<dependency>
 		    <groupId>io.jsonwebtoken</groupId>
 		    <artifactId>jjwt</artifactId>
@@ -59,6 +60,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+			<exclusions>
+	            <exclusion>
+	                <groupId>org.hibernate</groupId>
+	                <artifactId>hibernate-validator</artifactId>
+	            </exclusion>
+        	</exclusions>
 		</dependency>
 
 		<!-- Testing -->
