--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -26,10 +26,9 @@ spring:
     time-zone: UTC
   # File Upload
   servlet:
-    http:
-      multipart:
-        max-file-size: 5MB
-        max-request-size: 5MB
+    multipart:
+      max-file-size: 5MB
+      max-request-size: 5MB
     
 
 # - MyBatis -
@@ -49,4 +48,5 @@ at:
   sparklingscience:
     urbantrees:
       dateFormatPattern: "yyyy-MM-dd'T'HH-mm-ss"
+      encryptionPassword: /9dsbDkp+=?1hdbfO_djf9d#sfmfPDNPkf087,,deHd165
       
