+ add java 11 jee deps

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,17 @@
 	            </exclusion>
         	</exclusions>
 		</dependency>
+		
+		<!-- Java EE features -->
+		<dependency>
+			<groupId>jakarta.xml.bind</groupId>
+			<artifactId>jakarta.xml.bind-api</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish.jaxb</groupId>
+			<artifactId>jaxb-runtime</artifactId>
+		</dependency>
+		
 
 		<!-- Testing -->
 		<dependency>
