--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>at.sparklingscience</groupId>
 	<artifactId>urbantrees-api</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>0.1.1</version>
 	<packaging>jar</packaging>
 
 	<name>urbantrees</name>
@@ -14,7 +14,7 @@
 		<connection>scm:git:https://github.com/laurenzfiala/urban-trees-api.git</connection>
 		<developerConnection>scm:git:https://github.com/laurenzfiala/urban-trees-api.git</developerConnection>
 		<url>https://github.com/laurenzfiala/urban-trees-api</url>
-		<tag>HEAD</tag>
+		<tag>v0.1.1</tag>
 	</scm>
 
 	<parent>
