--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,9 +21,6 @@ spring:
     validationQuery: select 1
     maxActive: 50
     maxAge: 60000
-  jackson:
-    date-format: "yyyy-MM-dd'T'HH-mm-ss"
-    time-zone: UTC
   # File Upload
   servlet:
     multipart:
@@ -49,4 +46,6 @@ at:
     urbantrees:
       dateFormatPattern: "yyyy-MM-dd'T'HH-mm-ss"
       otpIssuer: "UT local"
+      userContent:
+        maxSavesPerUserPerDay: 9999
       
