+ finish CMS impl, iteration 1 + add QR code + PIN auth

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -44,8 +44,10 @@ logging:
 at:
   sparklingscience:
     urbantrees:
+      corsAllowedOriginPatterns: http://localhost:4200
       dateFormatPattern: "yyyy-MM-dd'T'HH-mm-ss"
       otpIssuer: "UT local"
+      loginQrUri: "http://localhost:4200/login/{token}?pin=true"
       userContent:
         maxSavesPerUserPerDay: 9999
       
